[gd_scene load_steps=6 format=3 uid="uid://0uefweshw4yr"]

[ext_resource type="Script" path="res://scripts/Menus/MenuOpciones.gd" id="1_6npp6"]
[ext_resource type="Texture2D" uid="uid://dad7alxumyyb8" path="res://Assets/ui/Botones/Volver.png" id="3_3bngj"]
[ext_resource type="Texture2D" uid="uid://8qten8p6ewuu" path="res://Assets/ui/Botones/Vacio.png" id="3_ckm8f"]

[sub_resource type="LabelSettings" id="LabelSettings_mek0c"]
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_tlwb0"]
font_size = 40
outline_size = 6

[node name="Menu" type="Control" groups=["menu"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6npp6")
rutaMenu = "res://scenes/Menus/MenuPrincipal.tscn"

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="ContenedorSliders" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.45
offset_top = -87.0
offset_right = 228.55
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="Volumen" type="HSlider" parent="ContenedorSliders"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="EfectosSonido" type="HSlider" parent="ContenedorSliders"]
layout_mode = 2
min_value = -60.0
max_value = 20.0
value = 20.0

[node name="EfectosSonido" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.316
anchor_right = 0.36
anchor_bottom = 0.316
offset_left = -157.36
offset_top = -11.384
offset_right = 2.63998
offset_bottom = 11.616
text = "EFECTOS DE SONIDO"
label_settings = SubResource("LabelSettings_mek0c")

[node name="Volumen" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.316
anchor_right = 0.36
anchor_bottom = 0.316
offset_left = -156.36
offset_top = -29.384
offset_right = 3.63998
offset_bottom = -6.384
text = "VOLUMEN"
label_settings = SubResource("LabelSettings_mek0c")
horizontal_alignment = 2

[node name="Texto" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_right = 94.0
offset_bottom = 67.0
grow_horizontal = 2
text = "OPCIONES"
label_settings = SubResource("LabelSettings_tlwb0")
horizontal_alignment = 1

[node name="Volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -52.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
icon = ExtResource("3_3bngj")
flat = true

[node name="Resetear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_right = 124.0
offset_bottom = -2.0
grow_vertical = 0
focus_mode = 0
text = "RESETEAR"
icon = ExtResource("3_ckm8f")
flat = true
icon_alignment = 1

[connection signal="value_changed" from="ContenedorSliders/Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="value_changed" from="ContenedorSliders/EfectosSonido" to="." method="_on_efectos_sonido_value_changed"]
[connection signal="pressed" from="Volver" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Resetear" to="." method="_on_resetear_pressed"]
